<resources>
    <string name="app_name">Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="username">UserName</string>
    <string name="sign_in">Sign-in</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
</resources>